Making height of different sections responsive.
Furthermore, the definition of widget specific styles has been moved from the widget-ui CSS.

--- a/src/main/webapp/static/css/widget.css
+++ b/src/main/webapp/static/css/widget.css
@@ -17,3 +17,57 @@ h2 {
 	margin: 5px 0;
 	text-align: right;
 }
+
+
+/* General layout */
+
+.widget-header {
+  height: 5%;
+  margin: 0.5% 0;
+}
+
+.widget-body {
+  height: 80%;
+}
+
+.widget-footer {
+  height: 8%;
+  margin: 1% 0;
+}
+
+.widget-body>div {
+  height: 100%;
+}
+
+
+/** HEADER **/
+
+.widget-header>div {
+  height: 100%;
+}
+
+.widget-header>div img {
+  /*vertical-align: middle;*/
+  height: 100%;
+  min-height: 14px;  /* It can be as small as the font of the text nearby*/
+  max-height: 40px;
+  margin-right: 5px;
+}
+
+
+/** FOOTER **/
+
+
+.widget-footer>div {
+  height: 100%;
+}
+
+.widget-footer>div a {
+  height: 100%;
+}
+
+.widget-footer>div img {
+  height: 100%;
+  min-height: 40px;
+  max-height: 60px;
+}
